fix css dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@
 .dark {
   --background: oklch(0.2100 0.0060 285.8850);
   --foreground: oklch(0.8109 0 0);
-  --card: oklch(0.1822 0 0);
+  --card: oklch(0.22 0 0);
   --card-foreground: oklch(0.8109 0 0);
   --popover: oklch(0.1797 0.0043 308.1928);
   --popover-foreground: oklch(0.8109 0 0);
@@ -72,7 +72,7 @@
   --accent-foreground: oklch(0.8109 0 0);
   --destructive: oklch(0.5770 0.2450 27.3250);
   --destructive-foreground: oklch(0.1797 0.0043 308.1928);
-  --border: oklch(0.2520 0 0);
+  --border: oklch(0.3407 0.00004 271.152);
   --input: oklch(0.2520 0 0);
   --ring: oklch(0.8370 0.1280 66.2900);
   --chart-1: oklch(0.6270 0.2650 303.9000);
